// Type definitions from MangaPlus for protocol buffer
// Based on: https://mangaplus.shueisha.co.jp/js/app.a3091b24.js

syntax = "proto3";

package MangaPlus;

option php_namespace = "App\\Api\\Protobuf\\MangaPlus";
option php_metadata_namespace = "App\\Api\\Protobuf\\GPBMetadata";

message Response {
  oneof result {
    SuccessResult success = 1;
    ErrorResult error = 2;
  }
}

message SuccessResult {
  // Champs combinés des deux versions
  bool isFeaturedUpdated = 1;
  RegistrationData registerationData = 2;
  HomeView homeView = 3;
  FeaturedTitlesView featuredTitlesView = 4;
  AllTitlesView allTitlesView = 5;
  TitleRankingView titleRankingView = 6;
  SubscribedTitlesView subscribedTitlesView = 7;

  oneof data {
    TitleDetailView titleDetailView = 8;
    AllTitlesViewV3 allTitlesViewV3 = 35;
  }

  CommentListView commentListView = 9;
  MangaViewer mangaViewer = 10;
  WebHomeView webHomeView = 11;
  SettingsView settingsView = 12;
  ProfileSettingsView profileSettingsView = 13;
  UpdateProfileResultView updateProfileResultView = 14;
  ServiceAnnouncementsView serviceAnnouncementsView = 15;
  InitialView initialView = 16;
  FeedbackView feedbackView = 17;
  AllTitlesViewV2 allTitlesViewV2 = 25;
}

message TitleDetailView {
  Title title = 1; // Conservé du v1
  string titleImageUrl = 2;
  string overview = 3; // Synopsis
  string backgroundImageUrl = 4;
  int64 nextTimeStamp = 5;
  int32 updateTiming = 6;
  string viewingPeriodDescription = 7;
  string nonAppearanceInfo = 8;
  repeated Chapter firstChapterList = 9;
  repeated Chapter lastChapterList = 10;
  repeated Banner banners = 11;
  repeated Title recommendedTitleList = 12;
  Sns sns = 13; // SnsShare dans le v2
  bool isSimulReleased = 14;
  bool isSubscribed = 15;
  int32 rating = 16;
  bool chaptersDescending = 17;
  uint32 numberOfViews = 18;
  repeated Banner titleBanners = 20;
  repeated Chapter ticketChapterList = 22;
  repeated Title ticketTitleList = 23;
  bool hasChaptersBetween = 24;
  Banner publisherBanner = 25;
  AdNetworkList advertisement = 26;
  repeated LanguageVersion availableLanguages = 27;
  repeated ChapterGroup chapterListGroup = 28;
  string regionCode = 30;
  repeated Tag tags = 31;
  Label label = 34;
  bool isFirstTimeFree = 35;
  repeated Chapter chapters = 38; // Ajouté du v2
}

message Title {
  uint32 titleId = 1;
  string name = 2;
  string author = 3;
  string portraitImageUrl = 4;
  string landscapeImageUrl = 5;
  uint32 viewCount = 6;
  int32 language = 7;
}

message Chapter {
  uint32 titleId = 1;
  uint32 chapterId = 2;
  string name = 3; // Nom dans v1, correspond souvent au titre
  string subTitle = 4;
  string thumbnailUrl = 5;
  int64 startTimeStamp = 6;
  int64 endTimeStamp = 7;
  bool alreadyViewed = 8;
  bool isVerticalOnly = 9;
  string number = 10; // Adapté du v2 (champ 3) pour éviter les conflits
  uint32 commentCount = 13;
}

message Page {
  message MangaPage {
    string imageUrl = 1;
    uint32 width = 2;
    uint32 height = 3;
    int32 type = 4;
    string encryptionKey = 5;
  }

  message BannerList {
    string bannerTitle = 1;
    repeated Banner banners = 2;
  }

  message LastPage {
    Chapter currentChapter = 1;
    Chapter nextChapter = 2;
    repeated Comment topComments = 3;
    bool isSubscribed = 4;
    uint32 nextTimeStamp = 5;
    int32 chapterType = 6;
    AdNetworkList advertisement = 7;
    Popup movieReward = 8;
  }

  MangaPage mangaPage = 1;
  BannerList bannerList = 2;
  LastPage lastPage = 3;
  AdNetworkList advertisement = 4;
}

message AllTitlesViewV3 {
  repeated Category categories = 2;
  repeated TitleContainer titles = 3;
}

message Category {
  string label = 1;
  string slug = 2;
}

message TitleContainer {
  string mainName = 1;
  repeated Title multiLangTitles = 2; // Utilise Title ou TitleDetail
  repeated Category categories = 3;
  int64 timestamp = 5;
}

message LanguageVersion {
  uint32 titleId = 1;
  uint32 languageId = 2;
}

message Banner {
  string imageUrl = 1;
  TransitionAction action = 2;
  uint32 id = 3;
}

message AdNetworkList {
  repeated AdNetwork adNetworks = 1;
}

message AdNetwork {
  message Facebook { string placementID = 1; }
  message Admob { string unitID = 1; }
  message Mopub { string unitID = 1; }
  message Adsense { string unitID = 1; }
  message Applovin { string unitID = 1; }

  Facebook facebook = 1;
  Admob admob = 2;
  Mopub mopub = 3;
  Adsense adsense = 4;
  Applovin applovin = 5;
}

message Comment {
  uint32 id = 1;
  uint32 index = 2;
  string userName = 3;
  string iconUrl = 4;
  bool isMyComment = 6;
  bool alreadyLiked = 7;
  uint32 numberOfLikes = 9;
  string body = 10;
  uint32 created = 11;
}

message Popup {
  message Button {
    string text = 1;
    TransitionAction action = 2;
  }
  message OSDefault {
    string subject = 1;
    string body = 2;
    Button okButton = 3;
    Button neutralButton = 4;
    Button cancelButton = 5;
  }
  message AppDefault {
    string subject = 1;
    string body = 2;
    TransitionAction action = 3;
    string imageUrl = 4;
  }
  OSDefault osDefault = 1;
  AppDefault appDefault = 2;
  MovieReward movieReward = 3;
}

message ErrorResult {
  int32 action = 1;
  Popup.OSDefault englishPopup = 2;
  Popup.OSDefault spanishPopup = 3;
  string debugInfo = 4;
}

message HomeView {
  repeated Banner topBanners = 1;
  repeated UpdatedTitleGroup groups = 2;
  Popup popup = 9;
}

message MangaViewer {
  repeated Page pages = 1;
  uint32 chapterId = 2;
  repeated Chapter chapters = 3;
  Sns sns = 4;
  string titleName = 5;
  string chapterName = 6;
  uint32 numberOfComments = 7;
  bool isVerticalOnly = 8;
  uint32 titleId = 9;
  bool startFromRight = 10;
}

message ChapterGroup {
  string chapterNumbers = 1;
  repeated Chapter firstChapterList = 2;
  repeated Chapter midChapterList = 3;
  repeated Chapter lastChapterList = 4;
}

message TransitionAction {
  int32 method = 1;
  string url = 2;
}

message Sns {
  string body = 1;
  string url = 2;
}

message Tag {
    string tag = 1;
    string slug = 2;
}

message Label {
    int32 label = 1;
    string description = 2;
}

message UpdatedTitleGroup {
  string groupName = 1;
  repeated UpdatedTitle titles = 2;
}

message UpdatedTitle {
  Title title = 1;
  uint32 chapterId = 2;
  string chapterName = 3;
  string chapterSubTitle = 4;
  bool isLatest = 5;
  bool isVerticalOnly = 6;
}

message WebHomeView {
  repeated Banner topBanners = 1;
  repeated UpdatedTitleGroup groups = 2;
  repeated Title ranking = 3;
}

message TitleRankingView { repeated Title titles = 1; }
message SubscribedTitlesView { repeated Title titles = 1; }
message AllTitlesView { repeated Title titles = 1; }
message AllTitlesViewV2 { repeated AllTitlesGroup allTitlesGroup = 1; }
message AllTitlesGroup { string theTitle = 1; repeated Title titles = 2; repeated Tag tags = 3; repeated Label labels = 4; uint32 nextChapterStartTimestamp = 5; }
message CommentListView { repeated Comment comments = 1; bool ifSetUserName = 2; }
message FeaturedTitlesView { message Contents { Banner banner = 1; TitleList titleList = 2; } Banner mainBanner = 1; Banner subBanner_1 = 2; Banner subBanner_2 = 3; repeated Contents contents = 4; }
message FeedbackView { repeated Feedback feedbackList = 1; }
message Feedback { uint32 timeStamp = 1; string body = 2; int32 responseType = 3; }
message InitialView { bool gdprAgreementRequired = 1; uint32 englishTitlesCount = 2; uint32 spanishTitlesCount = 3; }
message RegistrationData { string deviceSecret = 1; }
message ServiceAnnouncementsView { repeated ServiceAnnouncement serviceAnnouncements = 1; }
message ServiceAnnouncement { string title = 1; string body = 2; int32 date = 3; }
message SettingsView { CommentIcon myIcon = 1; string userName = 2; bool noticeOfNewsAndEvents = 3; bool noticeOfUpdatesOfSubscribedTitles = 4; uint32 englishTitlesCount = 5; uint32 spanishTitlesCount = 6; }
message ProfileSettingsView { repeated CommentIcon iconList = 1; string userName = 2; CommentIcon myIcon = 3; }
message CommentIcon { uint32 id = 1; string imageUrl = 2; }
message UpdateProfileResultView { int32 result = 1; }
message MovieReward { string imageUrl = 1; AdNetworkList advertisement = 2; }
message TitleList { string listName = 1; repeated Title featuredTitles = 2; }
